--- a/nvp-jssip-tryit/src/main/webapp/index.html
+++ b/nvp-jssip-tryit/src/main/webapp/index.html
@@ -3,152 +3,156 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <title>JsSIP tryit</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="Author" content="José Luis Millán, Iñaki Baz Castillo" />
-  <meta name="description" content="JsSIP based example web application. For commercial support please refer to the Versatica website (http://www.versatica.com) or send an email to info@versatica.com." />
-  <link rel="stylesheet" href="css/style.css" type="text/css" />
-  <link rel="icon" type="image/png" href="images/favicon.png" />
-  <script src="js/jquery-1.6.1.min.js" type="text/javascript"></script>
-  <script src="js/init.js" type="text/javascript"></script>
-  <script src="js/gui.js" type="text/javascript"></script>
-  <!-- JsSIP -->
-  <script src="js/jssip-devel-f4f9cf3.js" type="text/javascript"></script>
-  <!-- /JsSIP -->
+    <title>JsSIP tryit</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="Author" content="José Luis Millán, Iñaki Baz Castillo"/>
+    <meta name="description"
+          content="JsSIP based example web application. For commercial support please refer to the Versatica website (http://www.versatica.com) or send an email to info@versatica.com."/>
+    <link rel="stylesheet" href="css/style.css" type="text/css"/>
+    <link rel="icon" type="image/png" href="images/favicon.png"/>
+    <script src="js/jquery-1.6.1.min.js" type="text/javascript"></script>
+    <script src="js/init.js" type="text/javascript"></script>
+    <script src="js/gui.js" type="text/javascript"></script>
+    <!-- JsSIP -->
+    <script src="js/jssip-devel-f4f9cf3.js" type="text/javascript"></script>
+    <!-- /JsSIP -->
 </head>
 
 
 <body class="bg01">
 
-  <div id="top-bar">
+<div id="top-bar">
     <div class="description">
-      <p>a functional demo of <a href="http://jssip.net"><span>Js</span>SIP</a> "the JavaScript SIP library"</p>
+        <p>a functional demo of <a href="http://jssip.net"><span>Js</span>SIP</a> "the JavaScript SIP library"</p>
     </div>
-  </div>
+</div>
 
-  <div id="login-page">
+<div id="login-page">
     <div id="login-box">
-      <div class="logo"></div>
-      <div class="identification">
-        <form id="login-form" action="/">
-          <input id="sip_uri" class="first unset" type="text" value="SIP URI (i.e: sip:alice@example.com)"/>
-          <input id="sip_password" class="unset" type="password" value="SIP password"/>
-          <input id="ws_uri" class="last unset" type="text" value="WS URI (i.e: ws://example.com)"/>
-          <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>
-        </form>
-      </div>
+        <div class="logo"></div>
+        <div class="identification">
+            <form id="login-form" action="/">
+                <input id="sip_uri" class="first unset" type="text" value="SIP URI (i.e: sip:alice@example.com)"/>
+                <input id="sip_password" class="unset" type="password" value="SIP password"/>
+                <input id="ws_uri" class="last unset" type="text" value="WS URI (i.e: ws://example.com)"/>
+                <input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>
+            </form>
+        </div>
     </div>
 
     <!--<div id="version">
       <div class="jssip-version">JsSIP version: XXX</div>
     </div>-->
-  </div>
+</div>
 
-  <div id="phone-page">
+<div id="phone-page">
 
     <div id="themes">
-      <div class="theme01"></div>
-      <div class="theme02"></div>
-      <div class="theme03"></div>
-      <div class="theme04"></div>
+        <div class="theme01"></div>
+        <div class="theme02"></div>
+        <div class="theme03"></div>
+        <div class="theme04"></div>
     </div>
 
     <div id="phone">
 
-      <div class="status">
-        <div id="conn-status">
-          <span class="field">status: </span>
-          <span class="value"></span>
-        </div>
-        <div>
-          <span class="field">receive incoming calls: </span>
-          <input type="checkbox" id="register"/>
-        </div>
-        <div>
-          <span class="field">enable video: </span>
-          <input type="checkbox" id="video" checked/>
-        </div>
-        <div>
-          <span class="field">user: </span>
-          <span class="value user"></span>
-        </div>
-      </div>
-
-      <div class="controls">
-
-        <div class="ws-disconnected"></div>
-
-        <div class="dialbox">
-          <input type="text" class="destination" value=""/>
-          <div class="to">To:</div>
-          <div class="dial-buttons">
-            <div class="button call">call</div>
-            <div class="line-separator"></div>
-            <div class="button chat">chat</div>
-          </div>
+        <div class="status">
+            <div id="conn-status">
+                <span class="field">status: </span>
+                <span class="value"></span>
+            </div>
+            <div>
+                <span class="field">receive incoming calls: </span>
+                <input type="checkbox" id="register"/>
+            </div>
+            <div>
+                <span class="field">enable video: </span>
+                <input type="checkbox" id="video" checked/>
+            </div>
+            <div>
+                <span class="field">user: </span>
+                <span class="value user"></span>
+            </div>
         </div>
 
-        <div class="dialpad">
-          <div class="line">
-            <div class="button digit-1">1</div>
-            <div class="button digit-2">2</div>
-            <div class="button digit-3">3</div>
-          </div>
-          <div class="line-separator"></div>
-          <div class="line">
-            <div class="button digit-4">4</div>
-            <div class="button digit-5">5</div>
-            <div class="button digit-6">6</div>
-          </div>
-          <div class="line-separator"></div>
-          <div class="line">
-            <div class="button digit-7">7</div>
-            <div class="button digit-8">8</div>
-            <div class="button digit-9">9</div>
-          </div>
-          <div class="line-separator"></div>
-          <div class="line">
-            <div class="button digit-asterisk">*</div>
-            <div class="button digit-0">0</div>
-            <div class="button digit-pound">#</div>
-          </div>
-        </div><!-- .dialpad -->
+        <div class="controls">
 
-      </div><!-- .controls -->
+            <div class="ws-disconnected"></div>
+
+            <div class="dialbox">
+                <input type="text" class="destination" value=""/>
+                <div class="to">To:</div>
+                <div class="dial-buttons">
+                    <div class="button call">call</div>
+                    <div class="line-separator"></div>
+                    <div class="button chat">chat</div>
+                </div>
+            </div>
+
+            <div class="dialpad">
+                <div class="line">
+                    <div class="button digit-1">1</div>
+                    <div class="button digit-2">2</div>
+                    <div class="button digit-3">3</div>
+                </div>
+                <div class="line-separator"></div>
+                <div class="line">
+                    <div class="button digit-4">4</div>
+                    <div class="button digit-5">5</div>
+                    <div class="button digit-6">6</div>
+                </div>
+                <div class="line-separator"></div>
+                <div class="line">
+                    <div class="button digit-7">7</div>
+                    <div class="button digit-8">8</div>
+                    <div class="button digit-9">9</div>
+                </div>
+                <div class="line-separator"></div>
+                <div class="line">
+                    <div class="button digit-asterisk">*</div>
+                    <div class="button digit-0">0</div>
+                    <div class="button digit-pound">#</div>
+                </div>
+            </div><!-- .dialpad -->
+
+        </div><!-- .controls -->
     </div><!-- #phone -->
 
 
     <div id="sessions"></div>
 
     <div id="webcam">
-      <video id="remoteView" autoplay hidden=true poster="images/logo.png"></video>
-      <!--<video id="remoteView" autoplay
-        src="http://shapeshed.com/examples/HTML5-video-element/video/320x240.ogg">
-      </video>-->
+        <video id="remoteView" autoplay hidden=true poster="images/logo.png"></video>
+        <!--<video id="remoteView" autoplay
+          src="http://shapeshed.com/examples/HTML5-video-element/video/320x240.ogg">
+        </video>-->
 
-      <video id="selfView" autoplay hidden=true></video>
-      <!--<video id="selfView" autoplay
-        src="http://shapeshed.com/examples/HTML5-video-element/video/320x240.ogg">
-      </video>-->
+        <video id="selfView" autoplay hidden=true></video>
+        <!--<video id="selfView" autoplay
+          src="http://shapeshed.com/examples/HTML5-video-element/video/320x240.ogg">
+        </video>-->
     </div>
 
     <div id="ws_reconnect"></div>
     <div id="unregister_all"></div>
-  </div><!-- phone-page -->
+</div><!-- phone-page -->
 
 
-  <!-- Piwik -->
-  <script type="text/javascript">
-  var pkBaseURL = (("https:" == document.location.protocol) ? "https://www.aliax.net/piwik/" : "http://www.aliax.net/piwik/");
-  document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
-  </script><script type="text/javascript">
-  try {
-  var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 6);
-  piwikTracker.trackPageView();
-  piwikTracker.enableLinkTracking();
-  } catch( err ) {}
-  </script><noscript><p><img src="http://www.aliax.net/piwik/piwik.php?idsite=6" style="border:0" alt="" /></p></noscript>
-  <!-- End Piwik Tracking Code -->
+<!-- Piwik -->
+<script type="text/javascript">
+    var pkBaseURL = (("https:" == document.location.protocol) ? "https://www.aliax.net/piwik/" : "http://www.aliax.net/piwik/");
+    document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+</script>
+<script type="text/javascript">
+    try {
+        var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 6);
+        piwikTracker.trackPageView();
+        piwikTracker.enableLinkTracking();
+    } catch (err) {
+    }
+</script>
+<noscript><p><img src="http://www.aliax.net/piwik/piwik.php?idsite=6" style="border:0" alt=""/></p></noscript>
+<!-- End Piwik Tracking Code -->
 
 </body>
 </html>
